mobile popup CSS and fix Dropdown too short issue

--- a/src/client/scss/home/home.scss
+++ b/src/client/scss/home/home.scss
@@ -601,6 +601,11 @@ input:focus {
   .home-page-content-container {
     padding-right: 0;
   }
+
+  .home-page-create-new-patient-popup-inner {
+    left: 8%;
+    right: 8%;
+  }
 }
 
 
