--- a/src/client/scss/semantic.scss
+++ b/src/client/scss/semantic.scss
@@ -22656,7 +22656,7 @@
   }
   .ui.default.dropdown:not(.button) > .text,
   .ui.dropdown:not(.button) > .default.text {
-    color: rgba(191, 191, 191, 0.87);
+    color: black;
   }
   .ui.default.dropdown:not(.button) > input:focus ~ .text,
   .ui.dropdown:not(.button) > input:focus ~ .default.text {
